--- a/MRE/MRE/MRE.csproj
+++ b/MRE/MRE/MRE.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\MRE.Services\MRE.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="images\" />
+  </ItemGroup>
+
 </Project>
